# wikimason

./: .archledger.toml  .codecrate.toml  .gitignore  .pre-commit-config.yaml  .releaseledger.toml  .ruff.toml  .taskledger.toml  ARCHITECTURE.md  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.py
.archledger/: source-state.json  storage.yaml
.archledger/records/block/: al_0028.md  al_0029.md  al_0030.md  al_0031.md  al_0032.md  al_0033.md  al_0034.md  al_0035.md
.archledger/records/concepts/: al_0039.md  al_0040.md  al_0041.md
.archledger/records/constraints/: al_0017.md  al_0019.md  al_0020.md  al_0021.md
.archledger/sections/: al_0001.md  al_0002.md  al_0003.md  al_0004.md  al_0005.md  al_0006.md  al_0007.md  al_0008.md  al_0009.md  al_0010.md  al_0011.md  al_0012.md
.github/workflows/: pre-commit.yml
docs/: agent-workflow.md  agent-workflow.rst  architecture.md  architecture.rst  build.sh  command-reference.md  command-reference.rst  commands.md  commands.rst  conf.py  config.md  config.rst  index.md  index.rst  logseq.md  logseq.rst  migration.md  migration.rst  profiles.md  profiles.rst  raw-sources.md  raw-sources.rst  requirements.txt
skills/wikimason/: SKILL.md
tests/: conftest.py  test_agents_compile.py  test_build_indexes.py  test_canonical_file_ops.py  test_cli.py  test_cli_groups_no_raw_print.py  test_command_specs_metadata.py  test_command_surface_no_bridge.py  test_config_logging.py  test_context_export.py  test_context_resolution.py  test_files_behavior.py  test_ingest_plan_executable.py  test_json_envelope.py  test_link_format.py  test_links_search_backends.py  test_lint_starter_contract.py  test_log_cli.py  test_logging_policy.py  test_logs.py  test_logs_rotation.py  test_note_links_ingest.py  test_operational_logging.py  test_page_profiles.py  test_path_names.py  test_refactor.py  test_review_audit_files.py  test_scaffold.py  test_schema_behavior.py  test_skills.py  test_source_cli.py  test_source_lifecycle_characterization.py  test_source_manifest.py  test_templates_starter_style.py  test_test_helper_guards.py  test_toml_tools.py  test_vault_maintain.py  test_workflow.py
wikimason/: agents.py  audit.py  build.py  catalog.py  cli.py  cli_app.py  cli_helpers.py  cli_output.py  cli_state.py  cli_suggestions.py  clipboard.py  command_registry.py  command_specs.py  commands.py  config.py  constants.py  context.py  context_export.py  coverage.py  daily.py  errors.py  files.py  frontmatter.py  git_hooks.py  ingest.py  link_format.py  links.py  lint.py  lint_credentials.py  lint_links.py  lint_rules.py  log_events.py  log_policy.py  logging_policy.py  logs.py  migrate.py  note_types.py  notes.py  page_profiles.py  paths.py  (+25 more)
wikimason/cli_groups/: __init__.py  agents.py  catalog.py  config.py  context.py  daily.py  file.py  folder.py  index.py  ingest.py  links.py  log.py  migrate.py  note.py  page.py  property.py  review.py  root.py  skill.py  source.py  tag.py  task.py  template.py  text.py  vault.py
(+51 files in other folders)
